Fri Jul  5 12:14:40 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_rubyoptions.rb (TestRubyOptions#test_notfound): after
	  r41710, the path of command uses backslash as the separator on
	  Windows.

Fri Jul  5 11:29:47 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit/assertions.rb (assert_raise_with_message): move from
	  test/fileutils/test_fileutils.rb.  this is still experimental and
	  the interface may be changed.

Fri Jul  5 11:08:00 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (w32_spawn): r41710 made that if the command starts with
	  a quote and includes slash, removed the top quote and NOT removed the
	  last quote.
	  this fixes test failures on test/ruby/test_process.rb and
	  test/webrick.

Fri Jul  5 09:53:15 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/mkmf.rb (CONFIG['CPPOUTFILE']): fix r41769; CONFIG['CPPOUTFILE']
	  may be nil.

Fri Jul  5 05:39:53 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (BARY_MUL1): Renamed from BARY_MUL.
	  (bary_mul1): Renamed from bary_mul.
	  (bary_mul): Renamed from bary_mul2.

Fri Jul  5 04:58:05 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul_balance): Extracted from bigmul1_balance and
	  use bary_mul2 and bary_add to decrease allocations.

Fri Jul  5 02:14:00 2013  Akinori MUSHA  <knu@iDaemons.org>

	* lib/fileutils.rb (FileUtils#symbolic_modes_to_i): Fix the wrong
	  character class [+-=], which happened to match all desired
	  characters but also match undesired characters.

	* lib/fileutils.rb (FileUtils.chmod{,_R}): Enhance the symbolic
	  mode parser to support the permission symbols u/g/o and multiple
	  actions as defined in SUS, so that chmod("g=o+w", file) works as
	  expected.  Invalid symbolic modes are now rejected with
	  ArgumentError.

Fri Jul  5 00:25:39 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (have_framework): allow header file to check.
	  [ruby-core:55745] [Bug #8593]
